# 4Bit_Diary

./: .env.example  .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  database.py  db.sqlite3-shm  db.sqlite3-wal  docker-compose.yml  fix_summary.txt  pyproject.toml  requirements.txt
.github/workflows/: checks.yml  deploy.yml
app/: database.py  main.py
app/api/v1/: auth.py  diary.py
app/core/: config.py
app/db/: __init__.py
app/models/: Diary_emotion_keywords.py  EmotionKeyword.py  __init__.py  diaries.py  diary.py  diary_emotion_keywords.py  diarys.py  emotion_keyword.py  tag.py  token_blacklist.py  user.py  users.py
app/routers/: diaries.py  diary.py
app/schemas/: diary.py  schemas.py  tag.py  user.py
app/scripts/: run.sh
app/services/: ai_service.py  auth_service.py  diary_service.py  search_service.py  user_service.py
app/tests/: conftest.py  test_auth_api.py  test_diary.py
app/utils/: security.py
migrations/models/: 0_20250828063537_init.py  0_20250829045311_init.py  0_20250829135044_init.py
